# celery-intro

./: README.md  docker-compose.yaml  pyproject.toml
shop_app/: celery_app.py  get_task_status.py  send_emails.py  smtp_email_backend.py  tasks.py
