[project]
name = "celery-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Tsvetkov",email = "tsvetkov.frost@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery (>=5.6.0,<6.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "kombu (>=5.6.1,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
